--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
                 <h2>Paris</h2>
             </div>
 
- <div class="destination" id="India">
+ <div class="destination" id="india">
                 <h2>India</h2>
+            </div>
+
+ <div class="destination" id="USA">
+                <h2>USA</h2>
             </div>
         </div>
     </div>
