--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
 
  <div class="destination" id="USA">
-                <h2>USA</h2>
+                <h2>USAA</h2>
             </div>
         </div>
     </div>
